--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@runnerty/trigger-immediate",
-  "version": "3.0.2",
+  "version": "3.0.3",
   "description": "Runnerty module: Immediate",
   "author": "Runnerty Tech",
   "license": "MIT",
@@ -23,10 +23,11 @@
   },
   "homepage": "https://github.com/runnerty/trigger-immediate#readme",
   "dependencies": {
-    "@runnerty/module-core": "~3.0.4"
+    "@runnerty/module-core": "~3.0.4",
+    "ms": "~2.1.3"
   },
   "devDependencies": {
-    "eslint": "^7.19.0",
+    "eslint": "^7.20.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
     "prettier": "^2.2.1"
